# magia-editor

./: .gitignore  CMakeLists.txt  CustomPlainTextEdit.h  MyStyles.h  Resources.qrc  dependencies.txt  install_dependencies.sh  main.cpp  mainwindow.cpp  mainwindow.h  readme.md
MagiaEditor/: CMakeLists.txt  ConsoleOutput.h  EditorRes.qrc  MagiaDebugger.cpp  MagiaDebugger.h  MagiaEditor.cpp  MagiaEditor.h  MagiaEditorWidget.h  MagiaEditorWiget.cpp  MgStyles.h
MagiaEditor/include/: MagiaEditor.h  MagiaEditorWidget.h  MgStyles.h
MagiaEditor/src/: ConsoleOutput.cpp  MagiaDebugger.cpp  MagiaEditor.cpp  MagiaEditorWiget.cpp
